--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,9 @@ bind-key -r + resize-pane -U 1
 # Powerline
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 set-option -g status-justify "centre"
-set-option -g status-left-length 60
+set-option -g status-left-length 90
 set-option -g status-right-length 90
 set-option -g status-left "#(~/.tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(~/.tmux-powerline/powerline.sh right)"
@@ -50,8 +50,8 @@ set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 #
 ## pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-fg colour125 #base02
+set-option -g pane-active-border-fg colour125 #magenta
 #
 ## message text
 set-option -g message-bg colour235 #base02
