--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ bind E setw synchronize-panes off
 
 # Mode key is vim!
 set-window-option -g mode-keys vi
+set -sg escape-time 0
 
 # Enable mouse
 set -g mouse on
@@ -17,6 +18,9 @@ bind-key -r < resize-pane -L 1
 bind-key -r > resize-pane -R 1
 bind-key -r - resize-pane -D 1
 bind-key -r + resize-pane -U 1
+
+# quick view of processes
+bind "~" split-window "exec htop"
 
 # Powerline
 set-option -g status on
@@ -31,35 +35,60 @@ set-option -g status-right "#(~/.tmux-powerline/powerline.sh right)"
 # Set zsh as default shell
 set-option -g default-shell /bin/zsh
 
+## COLORSCHEME: gruvbox dark
+set-option -g status "on"
 
-#### COLOUR (Solarized 256)
-#
-## default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-#
-## default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-#
-## active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+# default statusbar colors
+set-option -g status-bg colour237 #bg1
+set-option -g status-fg colour223 #fg1
+
+# default window title colors
+set-window-option -g window-status-bg colour214 #yellow
+set-window-option -g window-status-fg colour237 #bg1
+
+set-window-option -g window-status-activity-bg colour237 #bg1
+set-window-option -g window-status-activity-fg colour248 #fg3
+
+# active window title colors
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-#
-## pane border
-set-option -g pane-border-fg colour125 #base02
-set-option -g pane-active-border-fg colour125 #magenta
-#
-## message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-#
-## pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-#
-## clock
-set-window-option -g clock-mode-colour colour64 #green
+set-window-option -g window-status-current-fg colour237 #bg1
+
+# pane border
+set-option -g pane-active-border-fg colour250 #fg2
+set-option -g pane-border-fg colour237 #bg1
+
+# message infos
+set-option -g message-bg colour239 #bg2
+set-option -g message-fg colour223 #fg1
+
+# writting commands inactive
+set-option -g message-command-bg colour239 #fg3
+set-option -g message-command-fg colour223 #bg1
+
+# pane number display
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
+
+# clock
+set-window-option -g clock-mode-colour colour109 #blue
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status-attr "none"
+set-option -g status-justify "left"
+set-option -g status-left-attr "none"
+set-option -g status-left-length "80"
+set-option -g status-right-attr "none"
+set-option -g status-right-length "80"
+set-window-option -g window-status-activity-attr "none"
+set-window-option -g window-status-attr "none"
+set-window-option -g window-status-separator ""
+
+set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
+set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+
+set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+
