Update tmuxconf and nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,94 +1,103 @@
+source "/Users/jerome/Library/Python/3.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Tmux cluster ssh
 bind-key S command-prompt -p "Open ssh to:" "neww 'tssh -r %%'" 
 
-# Toggle pane synchronisation
+set -g default-terminal "screen-256color" # colors!
+setw -g xterm-keys on
+set -s escape-time 10                     # faster command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s focus-events on
+
+set -g prefix2 C-a                        # GNU-Screen compatible prefix
+bind C-a send-prefix -2
+
+set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
+setw -q -g utf8 on
+
+set -g history-limit 5000                 # boost history
+
+# -- display -------------------------------------------------------------------
+
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
+
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
+
+set -g set-titles on          # set terminal title
+
+set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-time 1000      # slightly longer status messages display time
+
+set -g status-interval 5     # redraw status line every 5 seconds
+
+# activity
+set -g monitor-activity on
+set -g visual-activity off
+
+# -- navigation ----------------------------------------------------------------
+
+# create session
+bind C-c new-session
+
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
+
+# split current window horizontally
+bind - split-window -v
+# split current window vertically
+bind _ split-window -h
+
+# pane navigation
+bind h select-pane -L  # move left
+bind j select-pane -D  # move down
+bind k select-pane -U  # move up
+bind l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
+
+# pane resizing
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+# window navigation
+#unbind n
+#unbind p
+bind p previous-window # select previous window
+bind n next-window     # select next window
+bind Tab last-window     # move to last active window
+
+set -g mouse on         # enable mouse
+
+# pane synchronization broadcast
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
 
-# Mode key is vim!
-set-window-option -g mode-keys vi
-set -sg escape-time 0
+# -- copy mode -----------------------------------------------------------------
 
-# Enable mouse
-set -g mouse on
+bind Enter copy-mode # enter copy mode
 
-# Keyboard resizing
-bind-key -r < resize-pane -L 1
-bind-key -r > resize-pane -R 1
-bind-key -r - resize-pane -D 1
-bind-key -r + resize-pane -U 1
+run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# quick view of processes
-bind "~" split-window "exec htop"
-
-# Powerline
-set-option -g status on
-set-option -g status-interval 2
-#set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g status-left-length 90
-set-option -g status-right-length 90
-set-option -g status-left "#(~/.tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.tmux-powerline/powerline.sh right)"
-
-# Set zsh as default shell
-set-option -g default-shell /bin/zsh
-
-## COLORSCHEME: gruvbox dark
-set-option -g status "on"
-
-# default statusbar colors
-set-option -g status-bg colour237 #bg1
-set-option -g status-fg colour223 #fg1
-
-# default window title colors
-set-window-option -g window-status-bg colour214 #yellow
-set-window-option -g window-status-fg colour237 #bg1
-
-set-window-option -g window-status-activity-bg colour237 #bg1
-set-window-option -g window-status-activity-fg colour248 #fg3
-
-# active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237 #bg1
-
-# pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
-
-# message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
-
-# writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-attr "none"
-set-option -g status-justify "left"
-set-option -g status-left-attr "none"
-set-option -g status-left-length "80"
-set-option -g status-right-attr "none"
-set-option -g status-right-length "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr "none"
-set-window-option -g window-status-separator ""
-
-set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
-
-set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
-
+# copy to Mac OSX clipboard
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# copy to X11 clipboard
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# copy to Windows clipboard
+if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
+if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
